[tool.black]
line-length = 79

[tool.poetry]
name = "pygweblet"
version = "0.1"
description = "A web server using the file system to create routes."
license = "BSD-3-Clause"
authors = [
    "Vincent Le Goff <vincent.legoff.srs@gmail.com>"
]
readme = 'README.md'  # Markdown files are supported
repository = "https://github.com/talismud/pygweblet"
homepage = "https://github.com/talismud/pygweblet"
documentation = "https://github.com/talismud/pygweblet"
keywords = ["web", "FS", "http", "https"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
aiohttp = "^3.8"
aiohttp-session = "^2.11"
cryptography = "^37.0.2"
python = ">=3.7"  # Compatible python versions must be declared here
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
